Version 0.7.3a
  * PS3 transcoding
  * include metadata in lame encoded files (id3v2 tag)
  * initial WAV-encoder
  * initial PCM-encoder
  * fixed deadlock on malformed SSDP-messages
    (Thanks to Justin Maggard)
  * "tremor" (integer only vorbis decoder) support
  * initial video transcoding (feature request #1617435)
  * image rescaling (feature request #1656859)
  * vfolder creation speedup
    (patch by Justin Maggard)
  * shared file types completely configurable

Version 0.7.2a-20070529
  * initial support for virtual containers
  * initial UPnP Search support
  * initial support for device specific settings
  * initial ImageMagick support (read image properties)
  * initial ffmpeg support (read video properties)
  * initial XBox 360 support
    (Big thanks to Justin Maggard <jmaggard at users.sourceforge.net>)
  * initial PS3 support
  * initial iTunes.xml support
  * win32 gui (more or less ;))
  
  * split up fuppes (command line) and fuppesd (daemon)
  * support for FLAC >= 1.1.3 (api changed)
  * libiconv optional
  * fixed ip address detection
  * fixed crash if fuppes config is malformed
  * fixed urlencoded form value handling
  * fixed compilation error
	  (implemented detection of second iconv param)
  * HTTP client requests will no longer block the main thread
  * fixed bug #1671132
  * fixed bug #1669624
	  (thanks to Jochen <jochen2 at users.sourceforge.net> and 
    Justin Maggard <jmaggard at users.sourceforge.net>)
  * fixed extraction of folder name from shared directory
    when containing a trailing slash or backslash
  * fixed crash on timed out subscriptions (win32)

  * win32 
    * sqlite from 3.3.7 to 3.3.17
    * libxml2 from 2.6.19 to 2.6.28    

Version 0.7.1 (2007-02-03)
  * fixed bug #1650930 (win32)
  * Mac OS X fixes
  ** correct handling of socket option SO_NOSIGPIPE
  ** fixed send() error handling

Version 0.7 (2007-02-01)
  * initial UPnP eventing
    referring to the "Intel DeviceValidator" the eventing mechanism