@@ -123,6 +123,8 @@ libfuppes_la_SOURCES = \
   lib/Transcoding/VorbisWrapper.cpp\
   lib/Transcoding/MpcWrapper.cpp\
   lib/Transcoding/FlacWrapper.cpp\
+  lib/Transcoding/AACDecoder.h\
+  lib/Transcoding/AACDecoder.cpp\
   lib/Transcoding/ImageMagickWrapper.h\
   lib/Transcoding/ImageMagickWrapper.cpp
 
